third_echelon/code/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> multiple_statements
Rule 2     multiple_statements -> multiple_statements statement
Rule 3     multiple_statements -> statement
Rule 4     statement -> open
Rule 5     statement -> closed
Rule 6     else -> ELSE
Rule 7     open -> IF condition statement
Rule 8     open -> IF condition closed else open
Rule 9     open -> WHILE condition open
Rule 10    open -> for for_condition open
Rule 11    for -> FOR
Rule 12    closed -> simple
Rule 13    closed -> block
Rule 14    closed -> IF condition closed else closed
Rule 15    closed -> WHILE condition closed
Rule 16    closed -> for for_condition closed
Rule 17    condition -> L_PAREN expr R_PAREN
Rule 18    for_condition -> L_PAREN simple simple expr R_PAREN
Rule 19    for_condition -> L_PAREN simple simple R_PAREN
Rule 20    multi_declaration -> multi_declaration ID COMMA
Rule 21    multi_declaration -> multi_declaration MULTIPLY ID COMMA
Rule 22    multi_declaration -> multi_declaration ID ASSIGN expr COMMA
Rule 23    multi_declaration -> multi_declaration MULTIPLY ID ASSIGN expr COMMA
Rule 24    multi_declaration -> ID COMMA
Rule 25    multi_declaration -> ID ASSIGN expr COMMA
Rule 26    multi_declaration -> MULTIPLY ID COMMA
Rule 27    multi_declaration -> MULTIPLY ID ASSIGN expr COMMA
Rule 28    stop -> ID SEMICOLON
Rule 29    stop -> MULTIPLY ID SEMICOLON
Rule 30    stop -> ID ASSIGN expr SEMICOLON
Rule 31    stop -> MULTIPLY ID ASSIGN expr SEMICOLON
Rule 32    arrayindex -> L_SQBRACE index R_SQBRACE
Rule 33    narrayindex -> narrayindex arrayindex
Rule 34    narrayindex -> arrayindex
Rule 35    declaration -> TYPE ID SEMICOLON
Rule 36    declaration -> TYPE MULTIPLY ID SEMICOLON
Rule 37    declaration -> TYPE ID ASSIGN expr SEMICOLON
Rule 38    declaration -> TYPE MULTIPLY ID ASSIGN expr SEMICOLON
Rule 39    declaration -> TYPE multi_declaration stop
Rule 40    declaration -> TYPE ID narrayindex SEMICOLON
Rule 41    declaration -> TYPE ID narrayindex ASSIGN init_list SEMICOLON
Rule 42    init -> expr COMMA init
Rule 43    init -> expr
Rule 44    init_list -> L_FLOWBRACE init_list R_FLOWBRACE COMMA init_list
Rule 45    init_list -> L_FLOWBRACE init R_FLOWBRACE COMMA init_list
Rule 46    init_list -> L_FLOWBRACE init R_FLOWBRACE
Rule 47    init_list -> L_FLOWBRACE init_list R_FLOWBRACE
Rule 48    index -> expr
Rule 49    index -> empty
Rule 50    block -> left_flower multiple_statements right_flower
Rule 51    block -> left_flower right_flower
Rule 52    left_flower -> L_FLOWBRACE
Rule 53    right_flower -> R_FLOWBRACE
Rule 54    simple -> expr SEMICOLON
Rule 55    simple -> header
Rule 56    simple -> declaration
Rule 57    simple -> SEMICOLON
Rule 58    simple -> function
Rule 59    simple -> RETURN expr SEMICOLON
Rule 60    simple -> RETURN SEMICOLON
Rule 61    header -> HASH INCLUDE STRING
Rule 62    header -> HASH INCLUDE HEADER_FILE
Rule 63    empty -> <empty>
Rule 64    function_call -> ID L_PAREN call_params R_PAREN
Rule 65    call_params -> empty
Rule 66    call_params -> yes_call_params end_call_params
Rule 67    call_params -> end_call_params
Rule 68    yes_call_params -> yes_call_params expr COMMA
Rule 69    yes_call_params -> expr COMMA
Rule 70    end_call_params -> expr
Rule 71    yes_dec_params -> yes_dec_params TYPE expr COMMA
Rule 72    yes_dec_params -> yes_dec_params TYPE COMMA
Rule 73    yes_dec_params -> yes_dec_params TYPE MULTIPLY COMMA
Rule 74    yes_dec_params -> TYPE expr COMMA
Rule 75    yes_dec_params -> TYPE COMMA
Rule 76    yes_dec_params -> TYPE MULTIPLY COMMA
Rule 77    end_dec_params -> TYPE expr
Rule 78    end_dec_params -> TYPE
Rule 79    end_dec_params -> TYPE MULTIPLY
Rule 80    dec_params -> empty
Rule 81    dec_params -> yes_dec_params end_dec_params
Rule 82    dec_params -> end_dec_params
Rule 83    function -> TYPE ID L_PAREN dec_params R_PAREN function_2
Rule 84    function_2 -> SEMICOLON
Rule 85    function_2 -> block
Rule 86    expr -> expr assignment exprOR
Rule 87    expr -> exprOR
Rule 88    assignment -> ASSIGN
Rule 89    assignment -> PLUS_ASSIGN
Rule 90    assignment -> MINUS_ASSIGN
Rule 91    assignment -> MUL_ASSIGN
Rule 92    assignment -> DIV_ASSIGN
Rule 93    assignment -> AND_ASSIGN
Rule 94    assignment -> OR_ASSIGN
Rule 95    assignment -> XOR_ASSIGN
Rule 96    assignment -> MOD_ASSIGN
Rule 97    assignment -> L_SHIFT_ASSIGN
Rule 98    assignment -> R_SHIFT_ASSIGN
Rule 99    exprOR -> exprOR OR exprAND
Rule 100   exprOR -> exprAND
Rule 101   exprAND -> exprAND AND exprBITOR
Rule 102   exprAND -> exprBITOR
Rule 103   exprBITOR -> exprBITOR BIT_OR exprBITXOR
Rule 104   exprBITOR -> exprBITXOR
Rule 105   exprBITXOR -> exprBITXOR BIT_XOR exprBITAND
Rule 106   exprBITXOR -> exprBITAND
Rule 107   exprBITAND -> exprBITAND BIT_AND exprEQ
Rule 108   exprBITAND -> exprEQ
Rule 109   exprEQ -> exprEQ EQ exprRELOP
Rule 110   exprEQ -> exprEQ NE exprRELOP
Rule 111   exprEQ -> exprRELOP
Rule 112   exprRELOP -> exprRELOP relop exprSHIFT
Rule 113   exprRELOP -> exprSHIFT
Rule 114   relop -> LE
Rule 115   relop -> LT
Rule 116   relop -> GE
Rule 117   relop -> GT
Rule 118   exprSHIFT -> exprSHIFT L_SHIFT exprOP
Rule 119   exprSHIFT -> exprSHIFT R_SHIFT exprOP
Rule 120   exprSHIFT -> exprOP
Rule 121   exprOP -> exprOP PLUS term
Rule 122   exprOP -> exprOP MINUS term
Rule 123   exprOP -> term
Rule 124   term -> term MULTIPLY factor
Rule 125   term -> term DIVIDE factor
Rule 126   term -> term MOD factor
Rule 127   term -> factor
Rule 128   factor -> NOT factor
Rule 129   factor -> PLUS factor
Rule 130   factor -> MINUS factor
Rule 131   factor -> PLUS_PLUS factor
Rule 132   factor -> MINUS_MINUS factor
Rule 133   factor -> cast brace
Rule 134   factor -> brace
Rule 135   cast -> L_PAREN TYPE R_PAREN
Rule 136   cast -> L_PAREN TYPE MULTIPLY R_PAREN
Rule 137   brace -> L_PAREN expr R_PAREN
Rule 138   brace -> brace PLUS_PLUS
Rule 139   brace -> brace MINUS_MINUS
Rule 140   brace -> NUM
Rule 141   brace -> STRING
Rule 142   brace -> MULTIPLY ID
Rule 143   brace -> BIT_AND ID
Rule 144   brace -> ID
Rule 145   brace -> CHAR
Rule 146   brace -> function_call
Rule 147   brace -> ID narrayindex
Rule 148   NUM -> INT_NUM
Rule 149   NUM -> FLOAT_NUM

Terminals, with rules where they appear

AND                  : 101
AND_ASSIGN           : 93
ASSIGN               : 22 23 25 27 30 31 37 38 41 88
BIT_AND              : 107 143
BIT_OR               : 103
BIT_XOR              : 105
CHAR                 : 145
COMMA                : 20 21 22 23 24 25 26 27 42 44 45 68 69 71 72 73 74 75 76
DIVIDE               : 125
DIV_ASSIGN           : 92
ELSE                 : 6
EQ                   : 109
FLOAT_NUM            : 149
FOR                  : 11
GE                   : 116
GT                   : 117
HASH                 : 61 62
HEADER_FILE          : 62
ID                   : 20 21 22 23 24 25 26 27 28 29 30 31 35 36 37 38 40 41 64 83 142 143 144 147
IF                   : 7 8 14
INCLUDE              : 61 62
INT_NUM              : 148
LE                   : 114
LT                   : 115
L_FLOWBRACE          : 44 45 46 47 52
L_PAREN              : 17 18 19 64 83 135 136 137
L_SHIFT              : 118
L_SHIFT_ASSIGN       : 97
L_SQBRACE            : 32
MINUS                : 122 130
MINUS_ASSIGN         : 90
MINUS_MINUS          : 132 139
MOD                  : 126
MOD_ASSIGN           : 96
MULTIPLY             : 21 23 26 27 29 31 36 38 73 76 79 124 136 142
MUL_ASSIGN           : 91
NE                   : 110
NOT                  : 128
OR                   : 99
OR_ASSIGN            : 94
PLUS                 : 121 129
PLUS_ASSIGN          : 89
PLUS_PLUS            : 131 138
RETURN               : 59 60
R_FLOWBRACE          : 44 45 46 47 53
R_PAREN              : 17 18 19 64 83 135 136 137
R_SHIFT              : 119
R_SHIFT_ASSIGN       : 98
R_SQBRACE            : 32
SEMICOLON            : 28 29 30 31 35 36 37 38 40 41 54 57 59 60 84
STRING               : 61 141
TYPE                 : 35 36 37 38 39 40 41 71 72 73 74 75 76 77 78 79 83 135 136
WHILE                : 9 15
XOR_ASSIGN           : 95
error                : 

Nonterminals, with rules where they appear

NUM                  : 140
arrayindex           : 33 34
assignment           : 86
block                : 13 85
brace                : 133 134 138 139
call_params          : 64
cast                 : 133
closed               : 5 8 14 14 15 16
condition            : 7 8 9 14 15
dec_params           : 83
declaration          : 56
else                 : 8 14
empty                : 49 65 80
end_call_params      : 66 67
end_dec_params       : 81 82
expr                 : 17 18 22 23 25 27 30 31 37 38 42 43 48 54 59 68 69 70 71 74 77 86 137
exprAND              : 99 100 101
exprBITAND           : 105 106 107
exprBITOR            : 101 102 103
exprBITXOR           : 103 104 105
exprEQ               : 107 108 109 110
exprOP               : 118 119 120 121 122
exprOR               : 86 87 99
exprRELOP            : 109 110 111 112
exprSHIFT            : 112 113 118 119
factor               : 124 125 126 127 128 129 130 131 132
for                  : 10 16
for_condition        : 10 16
function             : 58
function_2           : 83
function_call        : 146
header               : 55
index                : 32
init                 : 42 45 46
init_list            : 41 44 44 45 47
left_flower          : 50 51
multi_declaration    : 20 21 22 23 39
multiple_statements  : 1 2 50
narrayindex          : 33 40 41 147
open                 : 4 8 9 10
relop                : 112
right_flower         : 50 51
simple               : 12 18 18 19 19
start                : 0
statement            : 2 3 7
stop                 : 39
term                 : 121 122 123 124 125 126
yes_call_params      : 66 68
yes_dec_params       : 71 72 73 81

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . multiple_statements
    (2) multiple_statements -> . multiple_statements statement
    (3) multiple_statements -> . statement
    (4) statement -> . open
    (5) statement -> . closed
    (7) open -> . IF condition statement
    (8) open -> . IF condition closed else open
    (9) open -> . WHILE condition open
    (10) open -> . for for_condition open
    (12) closed -> . simple
    (13) closed -> . block
    (14) closed -> . IF condition closed else closed
    (15) closed -> . WHILE condition closed
    (16) closed -> . for for_condition closed
    (11) for -> . FOR
    (54) simple -> . expr SEMICOLON
    (55) simple -> . header
    (56) simple -> . declaration
    (57) simple -> . SEMICOLON
    (58) simple -> . function
    (59) simple -> . RETURN expr SEMICOLON
    (60) simple -> . RETURN SEMICOLON
    (50) block -> . left_flower multiple_statements right_flower
    (51) block -> . left_flower right_flower
    (86) expr -> . expr assignment exprOR
    (87) expr -> . exprOR
    (61) header -> . HASH INCLUDE STRING
    (62) header -> . HASH INCLUDE HEADER_FILE
    (35) declaration -> . TYPE ID SEMICOLON
    (36) declaration -> . TYPE MULTIPLY ID SEMICOLON
    (37) declaration -> . TYPE ID ASSIGN expr SEMICOLON
    (38) declaration -> . TYPE MULTIPLY ID ASSIGN expr SEMICOLON
    (39) declaration -> . TYPE multi_declaration stop
    (40) declaration -> . TYPE ID narrayindex SEMICOLON
    (41) declaration -> . TYPE ID narrayindex ASSIGN init_list SEMICOLON
    (83) function -> . TYPE ID L_PAREN dec_params R_PAREN function_2
    (52) left_flower -> . L_FLOWBRACE
    (99) exprOR -> . exprOR OR exprAND
    (100) exprOR -> . exprAND
    (101) exprAND -> . exprAND AND exprBITOR
    (102) exprAND -> . exprBITOR
    (103) exprBITOR -> . exprBITOR BIT_OR exprBITXOR
    (104) exprBITOR -> . exprBITXOR
    (105) exprBITXOR -> . exprBITXOR BIT_XOR exprBITAND
    (106) exprBITXOR -> . exprBITAND
    (107) exprBITAND -> . exprBITAND BIT_AND exprEQ
    (108) exprBITAND -> . exprEQ
    (109) exprEQ -> . exprEQ EQ exprRELOP
    (110) exprEQ -> . exprEQ NE exprRELOP
    (111) exprEQ -> . exprRELOP
    (112) exprRELOP -> . exprRELOP relop exprSHIFT
    (113) exprRELOP -> . exprSHIFT
    (118) exprSHIFT -> . exprSHIFT L_SHIFT exprOP
    (119) exprSHIFT -> . exprSHIFT R_SHIFT exprOP
    (120) exprSHIFT -> . exprOP
    (121) exprOP -> . exprOP PLUS term
    (122) exprOP -> . exprOP MINUS term
    (123) exprOP -> . term
    (124) term -> . term MULTIPLY factor
    (125) term -> . term DIVIDE factor
    (126) term -> . term MOD factor
    (127) term -> . factor
    (128) factor -> . NOT factor
    (129) factor -> . PLUS factor
    (130) factor -> . MINUS factor
    (131) factor -> . PLUS_PLUS factor
    (132) factor -> . MINUS_MINUS factor
    (133) factor -> . cast brace
    (134) factor -> . brace
    (135) cast -> . L_PAREN TYPE R_PAREN
    (136) cast -> . L_PAREN TYPE MULTIPLY R_PAREN
    (137) brace -> . L_PAREN expr R_PAREN
    (138) brace -> . brace PLUS_PLUS
    (139) brace -> . brace MINUS_MINUS
    (140) brace -> . NUM
    (141) brace -> . STRING
    (142) brace -> . MULTIPLY ID
    (143) brace -> . BIT_AND ID
    (144) brace -> . ID
    (145) brace -> . CHAR
    (146) brace -> . function_call
    (147) brace -> . ID narrayindex
    (148) NUM -> . INT_NUM
    (149) NUM -> . FLOAT_NUM
    (64) function_call -> . ID L_PAREN call_params R_PAREN

    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 11
    SEMICOLON       shift and go to state 13
    RETURN          shift and go to state 17
    HASH            shift and go to state 20
    TYPE            shift and go to state 22
    L_FLOWBRACE     shift and go to state 26
    NOT             shift and go to state 40
    PLUS            shift and go to state 36
    MINUS           shift and go to state 38
    PLUS_PLUS       shift and go to state 41
    MINUS_MINUS     shift and go to state 42
    L_PAREN         shift and go to state 25
    STRING          shift and go to state 21
    MULTIPLY        shift and go to state 24
    BIT_AND         shift and go to state 31
    ID              shift and go to state 23
    CHAR            shift and go to state 46
    INT_NUM         shift and go to state 48
    FLOAT_NUM       shift and go to state 49

    start                          shift and go to state 1
    multiple_statements            shift and go to state 2
    statement                      shift and go to state 3
    open                           shift and go to state 4
    closed                         shift and go to state 5
    for                            shift and go to state 8
    simple                         shift and go to state 9
    block                          shift and go to state 10
    expr                           shift and go to state 12
    header                         shift and go to state 14
    declaration                    shift and go to state 15
    function                       shift and go to state 16
    left_flower                    shift and go to state 18
    exprOR                         shift and go to state 19
    exprAND                        shift and go to state 27
    exprBITOR                      shift and go to state 28
    exprBITXOR                     shift and go to state 29
    exprBITAND                     shift and go to state 30
    exprEQ                         shift and go to state 32
    exprRELOP                      shift and go to state 33
    exprSHIFT                      shift and go to state 34
    exprOP                         shift and go to state 35
    term                           shift and go to state 37
    factor                         shift and go to state 39
    cast                           shift and go to state 43
    brace                          shift and go to state 44
    NUM                            shift and go to state 45
    function_call                  shift and go to state 47

state 1

    (0) S' -> start .



state 2

    (1) start -> multiple_statements .
    (2) multiple_statements -> multiple_statements . statement
    (4) statement -> . open
    (5) statement -> . closed
    (7) open -> . IF condition statement
    (8) open -> . IF condition closed else open
    (9) open -> . WHILE condition open
    (10) open -> . for for_condition open
    (12) closed -> . simple
    (13) closed -> . block
    (14) closed -> . IF condition closed else closed
    (15) closed -> . WHILE condition closed
    (16) closed -> . for for_condition closed
    (11) for -> . FOR
    (54) simple -> . expr SEMICOLON
    (55) simple -> . header
    (56) simple -> . declaration
    (57) simple -> . SEMICOLON
    (58) simple -> . function
    (59) simple -> . RETURN expr SEMICOLON
    (60) simple -> . RETURN SEMICOLON
    (50) block -> . left_flower multiple_statements right_flower
    (51) block -> . left_flower right_flower
    (86) expr -> . expr assignment exprOR
    (87) expr -> . exprOR
    (61) header -> . HASH INCLUDE STRING
    (62) header -> . HASH INCLUDE HEADER_FILE
    (35) declaration -> . TYPE ID SEMICOLON
    (36) declaration -> . TYPE MULTIPLY ID SEMICOLON
    (37) declaration -> . TYPE ID ASSIGN expr SEMICOLON
    (38) declaration -> . TYPE MULTIPLY ID ASSIGN expr SEMICOLON
    (39) declaration -> . TYPE multi_declaration stop
    (40) declaration -> . TYPE ID narrayindex SEMICOLON
    (41) declaration -> . TYPE ID narrayindex ASSIGN init_list SEMICOLON
    (83) function -> . TYPE ID L_PAREN dec_params R_PAREN function_2
    (52) left_flower -> . L_FLOWBRACE
    (99) exprOR -> . exprOR OR exprAND
    (100) exprOR -> . exprAND
    (101) exprAND -> . exprAND AND exprBITOR
    (102) exprAND -> . exprBITOR
    (103) exprBITOR -> . exprBITOR BIT_OR exprBITXOR
    (104) exprBITOR -> . exprBITXOR
    (105) exprBITXOR -> . exprBITXOR BIT_XOR exprBITAND
    (106) exprBITXOR -> . exprBITAND
    (107) exprBITAND -> . exprBITAND BIT_AND exprEQ
    (108) exprBITAND -> . exprEQ
    (109) exprEQ -> . exprEQ EQ exprRELOP
    (110) exprEQ -> . exprEQ NE exprRELOP
    (111) exprEQ -> . exprRELOP
    (112) exprRELOP -> . exprRELOP relop exprSHIFT
    (113) exprRELOP -> . exprSHIFT
    (118) exprSHIFT -> . exprSHIFT L_SHIFT exprOP
    (119) exprSHIFT -> . exprSHIFT R_SHIFT exprOP
    (120) exprSHIFT -> . exprOP
    (121) exprOP -> . exprOP PLUS term
    (122) exprOP -> . exprOP MINUS term
    (123) exprOP -> . term
    (124) term -> . term MULTIPLY factor
    (125) term -> . term DIVIDE factor
    (126) term -> . term MOD factor
    (127) term -> . factor
    (128) factor -> . NOT factor
    (129) factor -> . PLUS factor
    (130) factor -> . MINUS factor
    (131) factor -> . PLUS_PLUS factor
    (132) factor -> . MINUS_MINUS factor
    (133) factor -> . cast brace
    (134) factor -> . brace
    (135) cast -> . L_PAREN TYPE R_PAREN
    (136) cast -> . L_PAREN TYPE MULTIPLY R_PAREN
    (137) brace -> . L_PAREN expr R_PAREN
    (138) brace -> . brace PLUS_PLUS
    (139) brace -> . brace MINUS_MINUS
    (140) brace -> . NUM
    (141) brace -> . STRING
    (142) brace -> . MULTIPLY ID
    (143) brace -> . BIT_AND ID
    (144) brace -> . ID
    (145) brace -> . CHAR
    (146) brace -> . function_call
    (147) brace -> . ID narrayindex
    (148) NUM -> . INT_NUM
    (149) NUM -> . FLOAT_NUM
    (64) function_call -> . ID L_PAREN call_params R_PAREN

    $end            reduce using rule 1 (start -> multiple_statements .)
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 11
    SEMICOLON       shift and go to state 13
    RETURN          shift and go to state 17
    HASH            shift and go to state 20
    TYPE            shift and go to state 22
    L_FLOWBRACE     shift and go to state 26
    NOT             shift and go to state 40
    PLUS            shift and go to state 36
    MINUS           shift and go to state 38
    PLUS_PLUS       shift and go to state 41
    MINUS_MINUS     shift and go to state 42
    L_PAREN         shift and go to state 25
    STRING          shift and go to state 21
    MULTIPLY        shift and go to state 24
    BIT_AND         shift and go to state 31
    ID              shift and go to state 23
    CHAR            shift and go to state 46
    INT_NUM         shift and go to state 48
    FLOAT_NUM       shift and go to state 49

    statement                      shift and go to state 50
    open                           shift and go to state 4
    closed                         shift and go to state 5
    for                            shift and go to state 8
    simple                         shift and go to state 9
    block                          shift and go to state 10
    expr                           shift and go to state 12
    header                         shift and go to state 14
    declaration                    shift and go to state 15
    function                       shift and go to state 16
    left_flower                    shift and go to state 18
    exprOR                         shift and go to state 19
    exprAND                        shift and go to state 27
    exprBITOR                      shift and go to state 28
    exprBITXOR                     shift and go to state 29
    exprBITAND                     shift and go to state 30
    exprEQ                         shift and go to state 32
    exprRELOP                      shift and go to state 33
    exprSHIFT                      shift and go to state 34
    exprOP                         shift and go to state 35
    term                           shift and go to state 37
    factor                         shift and go to state 39
    cast                           shift and go to state 43
    brace                          shift and go to state 44
    NUM                            shift and go to state 45
    function_call                  shift and go to state 47

state 3

    (3) multiple_statements -> statement .

    IF              reduce using rule 3 (multiple_statements -> statement .)
    WHILE           reduce using rule 3 (multiple_statements -> statement .)
    FOR             reduce using rule 3 (multiple_statements -> statement .)
    SEMICOLON       reduce using rule 3 (multiple_statements -> statement .)
    RETURN          reduce using rule 3 (multiple_statements -> statement .)
    HASH            reduce using rule 3 (multiple_statements -> statement .)
    TYPE            reduce using rule 3 (multiple_statements -> statement .)
    L_FLOWBRACE     reduce using rule 3 (multiple_statements -> statement .)
    NOT             reduce using rule 3 (multiple_statements -> statement .)
    PLUS            reduce using rule 3 (multiple_statements -> statement .)
    MINUS           reduce using rule 3 (multiple_statements -> statement .)
    PLUS_PLUS       reduce using rule 3 (multiple_statements -> statement .)
    MINUS_MINUS     reduce using rule 3 (multiple_statements -> statement .)
    L_PAREN         reduce using rule 3 (multiple_statements -> statement .)
    STRING          reduce using rule 3 (multiple_statements -> statement .)
    MULTIPLY        reduce using rule 3 (multiple_statements -> statement .)
    BIT_AND         reduce using rule 3 (multiple_statements -> statement .)
    ID              reduce using rule 3 (multiple_statements -> statement .)
    CHAR            reduce using rule 3 (multiple_statements -> statement .)
    INT_NUM         reduce using rule 3 (multiple_statements -> statement .)
    FLOAT_NUM       reduce using rule 3 (multiple_statements -> statement .)
    $end            reduce using rule 3 (multiple_statements -> statement .)
    R_FLOWBRACE     reduce using rule 3 (multiple_statements -> statement .)


state 4

    (4) statement -> open .

    IF              reduce using rule 4 (statement -> open .)
    WHILE           reduce using rule 4 (statement -> open .)
    FOR             reduce using rule 4 (statement -> open .)
    SEMICOLON       reduce using rule 4 (statement -> open .)
    RETURN          reduce using rule 4 (statement -> open .)
    HASH            reduce using rule 4 (statement -> open .)
    TYPE            reduce using rule 4 (statement -> open .)
    L_FLOWBRACE     reduce using rule 4 (statement -> open .)
    NOT             reduce using rule 4 (statement -> open .)
    PLUS            reduce using rule 4 (statement -> open .)
    MINUS           reduce using rule 4 (statement -> open .)
    PLUS_PLUS       reduce using rule 4 (statement -> open .)
    MINUS_MINUS     reduce using rule 4 (statement -> open .)
    L_PAREN         reduce using rule 4 (statement -> open .)
    STRING          reduce using rule 4 (statement -> open .)
    MULTIPLY        reduce using rule 4 (statement -> open .)
    BIT_AND         reduce using rule 4 (statement -> open .)
    ID              reduce using rule 4 (statement -> open .)
    CHAR            reduce using rule 4 (statement -> open .)
    INT_NUM         reduce using rule 4 (statement -> open .)
    FLOAT_NUM       reduce using rule 4 (statement -> open .)
    $end            reduce using rule 4 (statement -> open .)
    R_FLOWBRACE     reduce using rule 4 (statement -> open .)


state 5

    (5) statement -> closed .

    IF              reduce using rule 5 (statement -> closed .)
    WHILE           reduce using rule 5 (statement -> closed .)
    FOR             reduce using rule 5 (statement -> closed .)
    SEMICOLON       reduce using rule 5 (statement -> closed .)
    RETURN          reduce using rule 5 (statement -> closed .)
    HASH            reduce using rule 5 (statement -> closed .)
    TYPE            reduce using rule 5 (statement -> closed .)
    L_FLOWBRACE     reduce using rule 5 (statement -> closed .)
    NOT             reduce using rule 5 (statement -> closed .)
    PLUS            reduce using rule 5 (statement -> closed .)
    MINUS           reduce using rule 5 (statement -> closed .)
    PLUS_PLUS       reduce using rule 5 (statement -> closed .)
    MINUS_MINUS     reduce using rule 5 (statement -> closed .)
    L_PAREN         reduce using rule 5 (statement -> closed .)
    STRING          reduce using rule 5 (statement -> closed .)
    MULTIPLY        reduce using rule 5 (statement -> closed .)
    BIT_AND         reduce using rule 5 (statement -> closed .)
    ID              reduce using rule 5 (statement -> closed .)
    CHAR            reduce using rule 5 (statement -> closed .)
    INT_NUM         reduce using rule 5 (statement -> closed .)
    FLOAT_NUM       reduce using rule 5 (statement -> closed .)
    $end            reduce using rule 5 (statement -> closed .)
    R_FLOWBRACE     reduce using rule 5 (statement -> closed .)


state 6

    (7) open -> IF . condition statement
    (8) open -> IF . condition closed else open
    (14) closed -> IF . condition closed else closed
    (17) condition -> . L_PAREN expr R_PAREN

    L_PAREN         shift and go to state 52

    condition                      shift and go to state 51

state 7

    (9) open -> WHILE . condition open
    (15) closed -> WHILE . condition closed
    (17) condition -> . L_PAREN expr R_PAREN

    L_PAREN         shift and go to state 52

    condition                      shift and go to state 53

state 8

    (10) open -> for . for_condition open
    (16) closed -> for . for_condition closed
    (18) for_condition -> . L_PAREN simple simple expr R_PAREN
    (19) for_condition -> . L_PAREN simple simple R_PAREN

    L_PAREN         shift and go to state 55

    for_condition                  shift and go to state 54

state 9

    (12) closed -> simple .

    IF              reduce using rule 12 (closed -> simple .)
    WHILE           reduce using rule 12 (closed -> simple .)
    FOR             reduce using rule 12 (closed -> simple .)
    SEMICOLON       reduce using rule 12 (closed -> simple .)
    RETURN          reduce using rule 12 (closed -> simple .)
    HASH            reduce using rule 12 (closed -> simple .)
    TYPE            reduce using rule 12 (closed -> simple .)
    L_FLOWBRACE     reduce using rule 12 (closed -> simple .)
    NOT             reduce using rule 12 (closed -> simple .)
    PLUS            reduce using rule 12 (closed -> simple .)
    MINUS           reduce using rule 12 (closed -> simple .)
    PLUS_PLUS       reduce using rule 12 (closed -> simple .)
    MINUS_MINUS     reduce using rule 12 (closed -> simple .)
    L_PAREN         reduce using rule 12 (closed -> simple .)
    STRING          reduce using rule 12 (closed -> simple .)
    MULTIPLY        reduce using rule 12 (closed -> simple .)
    BIT_AND         reduce using rule 12 (closed -> simple .)
    ID              reduce using rule 12 (closed -> simple .)
    CHAR            reduce using rule 12 (closed -> simple .)
    INT_NUM         reduce using rule 12 (closed -> simple .)
    FLOAT_NUM       reduce using rule 12 (closed -> simple .)
    $end            reduce using rule 12 (closed -> simple .)
    R_FLOWBRACE     reduce using rule 12 (closed -> simple .)
    ELSE            reduce using rule 12 (closed -> simple .)


state 10

    (13) closed -> block .

    IF              reduce using rule 13 (closed -> block .)
    WHILE           reduce using rule 13 (closed -> block .)
    FOR             reduce using rule 13 (closed -> block .)
    SEMICOLON       reduce using rule 13 (closed -> block .)
    RETURN          reduce using rule 13 (closed -> block .)
    HASH            reduce using rule 13 (closed -> block .)
    TYPE            reduce using rule 13 (closed -> block .)
    L_FLOWBRACE     reduce using rule 13 (closed -> block .)
    NOT             reduce using rule 13 (closed -> block .)
    PLUS            reduce using rule 13 (closed -> block .)
    MINUS           reduce using rule 13 (closed -> block .)
    PLUS_PLUS       reduce using rule 13 (closed -> block .)
    MINUS_MINUS     reduce using rule 13 (closed -> block .)
    L_PAREN         reduce using rule 13 (closed -> block .)
    STRING          reduce using rule 13 (closed -> block .)
    MULTIPLY        reduce using rule 13 (closed -> block .)
    BIT_AND         reduce using rule 13 (closed -> block .)
    ID              reduce using rule 13 (closed -> block .)
    CHAR            reduce using rule 13 (closed -> block .)
    INT_NUM         reduce using rule 13 (closed -> block .)
    FLOAT_NUM       reduce using rule 13 (closed -> block .)
    $end            reduce using rule 13 (closed -> block .)
    R_FLOWBRACE     reduce using rule 13 (closed -> block .)
    ELSE            reduce using rule 13 (closed -> block .)


state 11

    (11) for -> FOR .

    L_PAREN         reduce using rule 11 (for -> FOR .)


state 12

    (54) simple -> expr . SEMICOLON
    (86) expr -> expr . assignment exprOR
    (88) assignment -> . ASSIGN
    (89) assignment -> . PLUS_ASSIGN
    (90) assignment -> . MINUS_ASSIGN
    (91) assignment -> . MUL_ASSIGN
    (92) assignment -> . DIV_ASSIGN
    (93) assignment -> . AND_ASSIGN
    (94) assignment -> . OR_ASSIGN
    (95) assignment -> . XOR_ASSIGN
    (96) assignment -> . MOD_ASSIGN
    (97) assignment -> . L_SHIFT_ASSIGN
    (98) assignment -> . R_SHIFT_ASSIGN

    SEMICOLON       shift and go to state 56
    ASSIGN          shift and go to state 58
    PLUS_ASSIGN     shift and go to state 59
    MINUS_ASSIGN    shift and go to state 60
    MUL_ASSIGN      shift and go to state 61
    DIV_ASSIGN      shift and go to state 62
    AND_ASSIGN      shift and go to state 63
    OR_ASSIGN       shift and go to state 64
    XOR_ASSIGN      shift and go to state 65
    MOD_ASSIGN      shift and go to state 66
    L_SHIFT_ASSIGN  shift and go to state 67
    R_SHIFT_ASSIGN  shift and go to state 68

    assignment                     shift and go to state 57

state 13

    (57) simple -> SEMICOLON .
